# axelar-amplifier

./: .gitmodules  Cargo.toml  README.md  deploy-contracts.sh  deploy.sh  instantiate-contracts.sh  optimize_wasm.sh  start-axelar.sh
.cargo/: config.toml
.github/workflows/: ampd-deployment.yml  ampd-periodic-main-build.yml  tofnd-deployment.yml
ampd/: Cargo.toml  config.toml
ampd/proto/tofnd/: common.proto
ampd/src/: aleo-json-like-format.pest  broadcaster.rs  config.rs  event_processor.rs  lib.rs  main.rs
ampd/src/aleo/: error.rs  http_client.rs  json_like.rs  mod.rs  parser.rs  receipt_builder.rs  utils.rs  verifier.rs
ampd/src/aleo/receipt_builder/: call_contract.rs  receipt.rs  signer_rotation.rs
ampd/src/broadcaster/: mod.rs
ampd/src/commands/: register_public_key.rs
ampd/src/grpc/server/: crypto.rs
ampd/src/handlers/: aleo_verify_msg.rs  aleo_verify_verifier_set.rs  config.rs  errors.rs  mod.rs  multisig.rs  solana_verify_msg.rs  solana_verify_verifier_set.rs  solana_verify_worker_set.rs  starknet_verifier_set.rs  starknet_verify_msg.rs  starknet_verify_verifier_set.rs  sui_verify_verifier_set.rs
ampd/src/handlers/testdata/: aleo_verify_verifier_set_should_deserialize_correct_event.golden
ampd/src/queue/: queued_broadcaster.rs
ampd/src/solana/: json_rpc.rs  mod.rs  msg_verifier.rs  rpc.rs  verifier.rs  verifier_set_verifier.rs  ws_verifier.rs
ampd/src/starknet/: error.rs  events.rs  json_rpc.rs  mod.rs  networks.rs  verifier.rs
ampd/src/starknet/events/: contract_call.rs  contract_called.rs  mod.rs
ampd/src/starknet/types/: array_span.rs  byte_array.rs
ampd/src/sui/: verifier.rs
ampd/src/tests/: aleo_transaction_at1837y8zjxqpp6hq29nyf6dvra8h9qu33u00qee4n2ayd7wvslky9q9v9v7c.json  aleo_transaction_at1y098cyhn7m4c80h3g4s5d3js9ynzaahm0elpgx87tesgzlv0g59swdpeza.json
ampd/src/tofnd/: grpc.rs  mod.rs
ampd/src/types/: key.rs
contracts/aleo-signature-verifier/src/: contract.rs  msg.rs
contracts/axelarnet-gateway/: Cargo.toml
contracts/axelarnet-gateway/src/: contract.rs
contracts/axelarnet-gateway/src/contract/: execute.rs
contracts/axelarnet-gateway/tests/: instantiate.rs
contracts/coordinator/: Cargo.toml
contracts/coordinator/src/: contract.rs  msg.rs
contracts/coordinator/src/contract/: execute.rs
contracts/coordinator/src/contract/migrations/: mod.rs
contracts/gateway/: Cargo.toml
contracts/gateway/src/: contract.rs
contracts/gateway/src/contract/: execute.rs
contracts/gateway/tests/: contract.rs
contracts/interchain-token-service/: Cargo.toml
contracts/interchain-token-service/src/: contract.rs  lib.rs  primitives.rs
contracts/interchain-token-service/src/contract/migrations/: v1_1_0.rs  v1_1_1.rs
contracts/interchain-token-service/tests/: instantiate.rs
contracts/its-aleo-translator/: Cargo.toml  README.md  build.rs
contracts/its-aleo-translator/src/: aleo.rs  contract.rs  lib.rs
contracts/its-aleo-translator/src/aleo/: inbound_deploy_interchain_token.rs  inbound_transfers.rs  its_hub_conversions.rs  outbound_deploy_interchain_token.rs  outbound_transfers.rs  to_aleo_value.rs  to_its_hub_message.rs  token_id_conversion.rs  try_from_impl.rs
contracts/its-aleo-translator/src/contract/: query.rs
contracts/multisig/: Cargo.toml
contracts/multisig-aleo/: Cargo.toml  dump  error.txt  out
contracts/multisig-aleo/src/: contract.rs  error.rs  key.rs  lib.rs  msg.rs
contracts/multisig-aleo/src/contract/: query.rs
contracts/multisig-prover/: Cargo.toml  abigen.rs  build.rs
contracts/multisig-prover/src/: cairo_gateway_abi.json  contract.rs  error.rs  events.rs  kor.rs  msg.rs  payload.rs
contracts/multisig-prover/src/contract/: execute.rs
contracts/multisig-prover/src/contract/migrations/: mod.rs
contracts/multisig-prover/src/encoding/: abi.rs  aleo.rs  mod.rs  solana.rs  starknet_abi.rs  starknet_cairo.rs  starknet_types.rs
contracts/multisig-prover/src/encoding/borsh/: execute_data.rs  hasher.rs  mod.rs  visitor.rs
contracts/multisig-prover/src/encoding/rkyv/: mod.rs
contracts/multisig-prover/src/test/: aleo_test_data.rs  mod.rs  test_data.rs
contracts/multisig/src/: client.rs  contract.rs  error.rs  events.rs  key.rs  lib.rs  msg.rs  signing.rs  stark.rs
contracts/multisig/src/contract/: execute.rs
contracts/multisig/src/contract/migrations/: mod.rs
contracts/multisig/src/test/: common.rs
contracts/multisig/src/testdata/: construct_register_public_key_msg.golden  construct_submit_signature_msg.golden
contracts/nexus-gateway/src/: contract.rs
contracts/rewards/: Cargo.toml
contracts/rewards/src/: contract.rs  state.rs
contracts/router/: Cargo.toml
contracts/router/src/: contract.rs
contracts/router/src/contract/: execute.rs
contracts/router/src/contract/migrations/: mod.rs
contracts/service-registry/: Cargo.toml
contracts/service-registry/src/: contract.rs  lib.rs
contracts/service-registry/src/contract/: query.rs
contracts/stark-sig-verifier/: Cargo.toml
contracts/stark-sig-verifier/src/: contract.rs  error.rs
contracts/stark-sig-verifier/src/contract/: execute.rs
contracts/voting-verifier/: Cargo.toml
contracts/voting-verifier/src/: client.rs  contract.rs  events.rs  execute.rs  msg.rs  state.rs
contracts/voting-verifier/src/contract/: execute.rs
contracts/voting-verifier/src/contract/migrations/: mod.rs  v0_5_0.rs
external-gateways/stellar/src/: lib.rs
integration-tests/: Cargo.toml
integration-tests/src/: multisig_prover_contract.rs  voting_verifier_contract.rs
integration-tests/tests/: bond_unbond.rs  coordinator_one_click_deployment.rs  message_routing.rs  only_prover_updates_verifiers.rs  update_worker_set.rs
integration-tests/tests/test_utils/: mod.rs
tools/migration-remover/src/: main.rs
